syntax = "proto3";

package node;

option go_package = "github.com/OpenFogStack/tinyFaaS/mistify/registry/node";

service Mistify {
    rpc Info(Empty) returns (NodeAddress);
    rpc Register(NodeAddress) returns (Empty);
    rpc UpdateSiblingList(SiblingList) returns (Empty);
    rpc GetFunctionList(Empty) returns (FunctionList);
    rpc RegisterNewFunction(RegisterFunction) returns (Empty);
    rpc CallFunction(FunctionCall) returns (FunctionCallResponse);
}

message NodeAddress {
    string name = 1;
    string address = 2;
    string managerAddress = 3;
    string proxyAddress = 4;
}

message SiblingList {
    repeated NodeAddress addresses = 1;
}

message Empty {}

message FunctionList {
    repeated string function_names = 1;
}

message RegisterFunction {
    string function_name = 1;
}

message FunctionCall {
    string functionIdentifier = 1;
    string data = 2;
    bool async = 3;
}
  
message FunctionCallResponse { string response = 1; }